Improved model construction, new models, prepare smart IMDP construction